// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`swc-plugin-global-module/runtime external modules when register module to external registry when call \`import()\` to get external module should throw error 1`] = `"module 'external' not found"`;

exports[`swc-plugin-global-module/runtime external modules when register module to external registry when call \`require()\` to get external module should throw error 1`] = `"module 'external' not found"`;

exports[`swc-plugin-global-module/runtime match snapshot (esm + moduleId) 1`] = `
"const _react = global.__modules.import("456");
const __app_components = global.__modules.import("@app/components");
const __app_core = global.__modules.import("@app/core");
const __app_hooks = global.__modules.import("@app/hooks");
const __app_module_a = global.__modules.import("@app/module_a");
const __app_module_b = global.__modules.import("@app/module_b");
const __app_module_c = global.__modules.import("@app/module_c");
const __app_module_d = global.__modules.import("@app/module_d");
const __app_secret = global.__modules.external("@app/secret");
const React = _react.default;
const useState = _react.useState;
const Container = __app_components.Container;
const useCustomHook = __app_hooks.useCustomHook;
const SECRET_KEY = __app_secret.SECRET_KEY;
const app = global.__modules.helpers.asWildcard(__app_core);
const __re_export_all = global.__modules.helpers.asWildcard(__app_module_a);
const __re_export_all1 = global.__modules.helpers.asWildcard(__app_module_b);
const __re_export = global.__modules.helpers.asWildcard(__app_module_c);
const __re_export1 = __app_module_d.driver;
function MyComponent() {
    const [count, setCount] = useState(0);
    useCustomHook(SECRET_KEY);
    return /*#__PURE__*/ React.createElement(Container, null, count);
}
class __Class {
}
global.__modules.esm("esm-id", {
    MyComponent,
    AppCore: app,
    default: __Class,
    car: __re_export,
    driverModule: __re_export1
}, __re_export_all, __re_export_all1);
"
`;

exports[`swc-plugin-global-module/runtime match snapshot (esm) 1`] = `
"const _react = global.__modules.import("456");
const __app_components = global.__modules.import("@app/components");
const __app_core = global.__modules.import("@app/core");
const __app_hooks = global.__modules.import("@app/hooks");
const __app_module_a = global.__modules.import("@app/module_a");
const __app_module_b = global.__modules.import("@app/module_b");
const __app_module_c = global.__modules.import("@app/module_c");
const __app_module_d = global.__modules.import("@app/module_d");
const __app_secret = global.__modules.external("@app/secret");
const React = _react.default;
const useState = _react.useState;
const Container = __app_components.Container;
const useCustomHook = __app_hooks.useCustomHook;
const SECRET_KEY = __app_secret.SECRET_KEY;
const app = global.__modules.helpers.asWildcard(__app_core);
const __re_export_all = global.__modules.helpers.asWildcard(__app_module_a);
const __re_export_all1 = global.__modules.helpers.asWildcard(__app_module_b);
const __re_export = global.__modules.helpers.asWildcard(__app_module_c);
const __re_export1 = __app_module_d.driver;
function MyComponent() {
    const [count, setCount] = useState(0);
    useCustomHook(SECRET_KEY);
    return /*#__PURE__*/ React.createElement(Container, null, count);
}
class __Class {
}
global.__modules.esm("demo.tsx", {
    MyComponent,
    AppCore: app,
    default: __Class,
    car: __re_export,
    driverModule: __re_export1
}, __re_export_all, __re_export_all1);
"
`;

exports[`swc-plugin-global-module/runtime when trying to get unregistered module should throw error 1`] = `"module 'unregistered' not found"`;
